--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "emotion-theming": "^10.0.19",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
