--- a/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
+++ b/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Features\Topics\Requests\" />
   </ItemGroup>
 
 </Project>
