--- a/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
+++ b/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Features\Subscriptions\Requests\" />
     <Folder Include="Features\Topics\Requests\" />
   </ItemGroup>
 
