--- a/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
+++ b/backend/MessageReplay.Api/MessageReplay.Api/MessageReplay.Api.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.1.1" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
