--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.13.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-table": "^7.6.3",
     "typescript": "3.7.2"
   },
   "scripts": {
