--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@hookform/devtools": "2.2.1",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-table": "^7.0.29",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
