--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@hookform/devtools": "2.2.1",
+    "@types/dateformat": "^3.0.1",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-table": "^7.0.29",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
@@ -22,6 +23,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "axios": "^0.21.1",
+    "dateformat": "^4.5.1",
     "emotion-theming": "^10.0.19",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
