--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.4.1",
+    "@chakra-ui/core": "^0.8",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@types/jest": "24.0.22",
@@ -28,6 +28,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-hook-form": "^6.15.5",
+    "react-icons": "^4.2.0",
     "react-query": "^3.13.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
