--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,15 @@
     "react-dom": "^16.11.0",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
+    "react-json-pretty": "^2.2.0",
     "react-query": "^3.13.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-table": "^7.6.3",
     "typescript": "3.7.2"
+  },
+  "resolutions": {
+    "body-scroll-lock": "3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
