Dockerize solution with nginx

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -6,23 +6,36 @@ server {
 
 
   server_name localhost;
-  access_log /var/log/nginx/appstore.access.log;
-  error_log /var/log/nginx/appstore.error.log;
+  access_log /var/log/nginx/message-replay.access.log;
+  error_log /var/log/nginx/message-replay.error.log;
 
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ /index.html index.html;
   }
 
-  location /api {
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
 
-      #hack to prevent nginx to resolve container's host on start up
-      proxy_pass http://backend;
+  # to reach swagger documentation
+  location /docs {
+    proxy_pass http://backend;
+    index  index.html
+    try_files $uri /index.html
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+  }
+
+
+  # to reach api endpoints
+  location /api {
+    proxy_pass http://backend;
+
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
   }
 
   error_page   500 502 503 504  /50x.html;
